--- a/CollectionOfAlgorithms/MainWindow.xaml
+++ b/CollectionOfAlgorithms/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Loaded="Window_Loaded"
         ResizeMode="NoResize"
-        Title="MainWindow" Width="528" Height="420">
+        Title="MainWindow" Height="auto">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -32,7 +32,7 @@
                             BorderThickness="1"
                             Grid.Column="0"
                             Grid.Row="0">
-                        <Image Name="MandelbrotImage" Width="300" Height="300" MaxHeight="300" MaxWidth="300" />
+                        <Image Name="MandelbrotImage" Width="600" Height="400" MaxHeight="400" MaxWidth="600" />
                     </Border>
 
                     <Border BorderThickness="1"
@@ -99,7 +99,7 @@
                             BorderThickness="1"
                             Grid.Column="0"
                             Grid.Row="0">
-                        <Image Name="CellularImage" Width="300" Height="300" MaxHeight="300" MaxWidth="300" />
+                        <Image Name="CellularImage" Width="600" Height="400"/>
                     </Border>
                     <Border BorderThickness="1"
                             BorderBrush="LightGray"
